resources/webidl2/test/invalid/baseline/extattr-empty-ids.txt
Syntax error at line 1:
[Exposed=()]
          ^ Expected identifiers but none found
